brat/test/golden/error/toplevel-leftovers.brat.golden
Error in test/golden/error/toplevel-leftovers.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 7}}:
f = 42
    ^^

  Type mismatch when checking f
Expected: (a1 :: Nat), (b1 :: Bool)
But got:  (a1 :: Nat)


